temporary overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,7 @@ body {
     font-weight: 300;
     font-size: 1.75rem;
     color: #FFF;
+    overflow-x: hidden;
 } 
 
 body.open {
